apps/meal-planner/service.yml
apiVersion: v1
kind: Service
metadata:
  name: meal-planner-svc
spec:
  ports:
    - name: 80-tcp
      port: 80
      targetPort: 3001
